--- a/app/src/main/res/layout/detail_normal.xml
+++ b/app/src/main/res/layout/detail_normal.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:divider="?android:dividerHorizontal"
+    android:dividerPadding="10dp"
+    android:showDividers="middle">
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:layout_marginTop="10dp">
 
         <View
@@ -56,7 +61,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/colorBackground"
             />
 
 
@@ -114,9 +118,11 @@
             android:padding="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:textSize="23sp"
-            android:text="Text Size"/>
+            android:layout_marginStart="15dp"
+            android:textSize="20sp"
+            android:layout_gravity="center_vertical"
+            android:text="Text Size"
+            android:fontFamily="@font/Arial"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -147,9 +153,11 @@
             android:padding="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:textSize="23sp"
-            android:text="Text Color"/>
+            android:layout_marginStart="15dp"
+            android:textSize="20sp"
+            android:layout_gravity="center_vertical"
+            android:text="Text Color"
+            android:fontFamily="@font/Arial"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -175,9 +183,11 @@
             android:padding="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:textSize="23sp"
-            android:text="Highlight Color"/>
+            android:layout_marginStart="15dp"
+            android:textSize="20sp"
+            android:layout_gravity="center_vertical"
+            android:text="Highlight Color"
+            android:fontFamily="@font/Arial"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -205,9 +215,11 @@
             android:padding="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:textSize="23sp"
-            android:text="Indentation"/>
+            android:layout_marginStart="15dp"
+            android:textSize="20sp"
+            android:layout_gravity="center_vertical"
+            android:text="Indentation"
+            android:fontFamily="@font/Arial"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
