--- a/app/src/main/res/drawable/color_panel_none.xml
+++ b/app/src/main/res/drawable/color_panel_none.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="#000000">
     <item>
         <shape android:shape="oval">
             <solid android:color="#ffffff"/>
             <stroke
-                android:width="2dp"
+                android:width="1dp"
                 android:color="@android:color/darker_gray" />
 
             <size
@@ -13,4 +13,33 @@
                 android:height="@dimen/colorPanelViewSize" />
         </shape>
     </item>
-</ripple>
+    <item>
+        <!--android:left="-200dp"-->
+        <!--android:bottom="100dp"-->
+
+
+        <rotate
+            android:fromDegrees="130">
+
+            <shape
+                android:shape="line">
+
+                <stroke android:color="@color/colorTextRed"
+                    android:width="2dp"/>
+            </shape>
+
+        </rotate>
+    </item>
+    <item>
+        <shape android:shape="oval">
+            <solid android:color="#00000000"/>
+            <stroke
+                android:width="1dp"
+                android:color="@android:color/darker_gray" />
+
+            <size
+                android:width="@dimen/colorPanelViewSize"
+                android:height="@dimen/colorPanelViewSize" />
+        </shape>
+    </item>
+</layer-list>
