--- a/app/src/main/res/layout/detail_normal.xml
+++ b/app/src/main/res/layout/detail_normal.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:divider="?android:dividerHorizontal"
+    android:divider="@drawable/divider"
     android:dividerPadding="10dp"
     android:showDividers="middle">
 
@@ -201,7 +201,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginEnd="15dp"
             android:background="?attr/actionBarItemBackground"
-            android:src="@drawable/color_panel_view"
+            android:src="@drawable/color_panel_none"
             android:padding="@dimen/colorPanelPadding"/>
     </LinearLayout>
 
