--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="colorBackRed">#F96E90</color>
     <color name="colorBackGray">#9B9B9B</color>
 
+    <color name="colorDivider">#494949</color>
+
 
 
 
