--- a/app/src/main/res/layout/detail_normal.xml
+++ b/app/src/main/res/layout/detail_normal.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:divider="@drawable/divider"
     android:dividerPadding="10dp"
     android:showDividers="middle">
@@ -122,7 +122,7 @@
             android:textSize="20sp"
             android:layout_gravity="center_vertical"
             android:text="Text Size"
-            android:fontFamily="@font/Arial"/>
+            android:fontFamily="@font/arial"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -157,7 +157,7 @@
             android:textSize="20sp"
             android:layout_gravity="center_vertical"
             android:text="Text Color"
-            android:fontFamily="@font/Arial"/>
+            android:fontFamily="@font/arial"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -187,7 +187,7 @@
             android:textSize="20sp"
             android:layout_gravity="center_vertical"
             android:text="Highlight Color"
-            android:fontFamily="@font/Arial"/>
+            android:fontFamily="@font/arial"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -219,7 +219,7 @@
             android:textSize="20sp"
             android:layout_gravity="center_vertical"
             android:text="Indentation"
-            android:fontFamily="@font/Arial"/>
+            android:fontFamily="@font/arial"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
