--- a/app/src/main/res/layout/detail_layout.xml
+++ b/app/src/main/res/layout/detail_layout.xml
@@ -5,14 +5,17 @@
     android:layout_height="wrap_content"
     android:divider="@drawable/divider"
     android:dividerPadding="10dp"
-    android:showDividers="middle">
+    android:showDividers="middle"
+    android:paddingTop="@dimen/detailTopDownPadding"
+    android:paddingBottom="@dimen/detailTopDownPadding">
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="@dimen/detailDividerMargin"
+        android:layout_marginEnd="@dimen/detailDividerMargin"
+        >
 
         <View
             android:layout_width="match_parent"
@@ -21,8 +24,8 @@
 
         <com.example.wysiwyg.EditorButton
             android:id="@+id/btn_bold_detail"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
+            android:layout_width="@dimen/buttonSize"
+            android:layout_height="@dimen/buttonSize"
             android:layout_marginEnd="2dp"
             android:background="?attr/actionBarItemBackground"
             android:src="@drawable/ic_bold"
@@ -30,8 +33,8 @@
 
         <com.example.wysiwyg.EditorButton
             android:id="@+id/btn_bold_italic_detail"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
+            android:layout_width="@dimen/buttonSize"
+            android:layout_height="@dimen/buttonSize"
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
             android:background="?attr/actionBarItemBackground"
@@ -40,8 +43,8 @@
 
         <com.example.wysiwyg.EditorButton
             android:id="@+id/btn_bold_underline_detail"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
+            android:layout_width="@dimen/buttonSize"
+            android:layout_height="@dimen/buttonSize"
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
             android:background="?attr/actionBarItemBackground"
@@ -50,8 +53,8 @@
 
         <com.example.wysiwyg.EditorButton
             android:id="@+id/btn_bold_strike_detail"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
+            android:layout_width="@dimen/buttonSize"
+            android:layout_height="@dimen/buttonSize"
             android:layout_marginStart="2dp"
             android:background="?attr/actionBarItemBackground"
             android:src="@drawable/ic_strike"
@@ -69,7 +72,9 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/detailDividerMargin"
+        android:layout_marginEnd="@dimen/detailDividerMargin">
 
         <View
             android:layout_width="match_parent"
@@ -78,16 +83,16 @@
 
         <com.example.wysiwyg.EditorButton
             android:id="@+id/btn_alignLeft_normal"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
+            android:layout_width="@dimen/buttonSize"
+            android:layout_height="@dimen/buttonSize"
             android:layout_marginEnd="2dp"
             android:src="@drawable/ic_left_align"
             android:background="?attr/actionBarItemBackground"/>
 
         <com.example.wysiwyg.EditorButton
             android:id="@+id/btn_bold_alignCenter_normal"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
+            android:layout_width="@dimen/buttonSize"
+            android:layout_height="@dimen/buttonSize"
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
             android:src="@drawable/ic_center_align"
@@ -96,8 +101,8 @@
 
         <com.example.wysiwyg.EditorButton
             android:id="@+id/btn_bold_alignRight_normal"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
+            android:layout_width="@dimen/buttonSize"
+            android:layout_height="@dimen/buttonSize"
             android:layout_marginStart="2dp"
             android:src="@drawable/ic_right_align"
             android:background="?attr/actionBarItemBackground"/>
@@ -112,14 +117,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingStart="@dimen/sideLinePadding"
+        android:paddingEnd="@dimen/sideLinePadding"
+        android:layout_marginTop="@dimen/detailDividerMargin"
+        android:layout_marginEnd="@dimen/detailDividerMargin">
 
         <TextView
             android:padding="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:textSize="20sp"
+            android:textSize="@dimen/detailTextSize"
             android:layout_gravity="center_vertical"
             android:text="Text Size"
             android:fontFamily="@font/arial"/>
@@ -130,31 +138,33 @@
 
         <com.example.wysiwyg.EditorButton
             android:id="@+id/btn_sizeUp_normal"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
+            android:layout_width="@dimen/buttonSize"
+            android:layout_height="@dimen/buttonSize"
             android:layout_marginEnd="5dp"
             android:background="?attr/actionBarItemBackground"
             android:src="@drawable/ic_size_down"/>
         <com.example.wysiwyg.EditorButton
             android:id="@+id/btn_sizeDown_normal"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
+            android:layout_width="@dimen/buttonSize"
+            android:layout_height="@dimen/buttonSize"
             android:layout_marginStart="5dp"
-            android:layout_marginEnd="15dp"
             android:background="?attr/actionBarItemBackground"
             android:src="@drawable/ic_size_up"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingStart="@dimen/sideLinePadding"
+        android:paddingEnd="@dimen/sideLinePadding"
+        android:layout_marginTop="@dimen/detailDividerMargin"
+        android:layout_marginEnd="@dimen/detailDividerMargin">
 
         <TextView
             android:padding="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:textSize="20sp"
+            android:textSize="@dimen/detailTextSize"
             android:layout_gravity="center_vertical"
             android:text="Text Color"
             android:fontFamily="@font/arial"/>
@@ -166,10 +176,8 @@
 
         <com.example.wysiwyg.EditorButton
             android:id="@+id/btn_color_detail"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="15dp"
+            android:layout_width="@dimen/buttonSize"
+            android:layout_height="@dimen/buttonSize"
             android:background="?attr/actionBarItemBackground"
             android:src="@drawable/color_panel_view"
             android:padding="@dimen/colorPanelPadding"/>
@@ -177,14 +185,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingStart="@dimen/sideLinePadding"
+        android:paddingEnd="@dimen/sideLinePadding"
+        android:layout_marginTop="@dimen/detailDividerMargin"
+        android:layout_marginEnd="@dimen/detailDividerMargin">
 
         <TextView
             android:padding="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:textSize="20sp"
+            android:textSize="@dimen/detailTextSize"
             android:layout_gravity="center_vertical"
             android:text="Highlight Color"
             android:fontFamily="@font/arial"/>
@@ -196,10 +207,8 @@
 
         <com.example.wysiwyg.EditorButton
             android:id="@+id/btn_bgcolor_detail"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="15dp"
+            android:layout_width="@dimen/buttonSize"
+            android:layout_height="@dimen/buttonSize"
             android:background="?attr/actionBarItemBackground"
             android:src="@drawable/color_panel_none"
             android:padding="@dimen/colorPanelPadding"/>
@@ -209,17 +218,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingStart="@dimen/sideLinePadding"
+        android:paddingEnd="@dimen/sideLinePadding"
+        android:layout_marginTop="@dimen/detailDividerMargin"
+        android:layout_marginEnd="@dimen/detailDividerMargin"
         >
 
         <TextView
             android:padding="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:textSize="20sp"
+            android:textSize="@dimen/detailTextSize"
             android:layout_gravity="center_vertical"
             android:text="Indentation"
             android:fontFamily="@font/arial"/>
+
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -227,8 +240,8 @@
 
         <com.example.wysiwyg.EditorButton
             android:id="@+id/btn_indentation_in"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
+            android:layout_width="@dimen/buttonSize"
+            android:layout_height="@dimen/buttonSize"
             android:layout_marginEnd="5dp"
             android:background="?attr/actionBarItemBackground"
             android:src="@drawable/ic_indentation_in"/>
@@ -236,10 +249,9 @@
 
         <com.example.wysiwyg.EditorButton
             android:id="@+id/btn_indentation_out"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
+            android:layout_width="@dimen/buttonSize"
+            android:layout_height="@dimen/buttonSize"
             android:layout_marginStart="5dp"
-            android:layout_marginEnd="15dp"
             android:background="?attr/actionBarItemBackground"
             android:src="@drawable/ic_indentation_out"
             />
