--- a/app/src/main/res/layout/popup_insert.xml
+++ b/app/src/main/res/layout/popup_insert.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp">
+        android:layout_margin="@dimen/insertMargin">
 
         <com.example.wysiwyg.EditorButton
             android:id="@+id/btn_img"
